# .github

./: README.md  long-readme.md  pyproject.toml
profile/: README.md
profile/snapshot/: README.md
profile/src/: README.foot.md  README.main.md  from_md.py  resources.yaml  update_md.py
