[tool.poetry]
name = "saez-github"
version = "0.1.0"
description = "GitHub landing page"
authors = ["deeenes <turei.denes@gmail.com>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.9,<3.13"
pyyaml = "^6.0.2"
grip = "^4.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
