[tool.poetry]
name = "saez-github"
version = "0.1.0"
description = "GitHub landing page"
authors = ["deeenes <turei.denes@gmail.com>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0.2"
grip = "^4.6.2"
linkcheckmd = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
